test/configCases/errors/import-missing-amd/errors.js
module.exports = [
	[/Cannot find module/],
	[/target does not support AMD external dependencies/]
];
